--- a/package.json
+++ b/package.json
@@ -20,27 +20,36 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.10",
+    "@angular/cdk": "^20.2.12",
     "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
+    "@angular/compiler": "^20.3.9",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@swimlane/ngx-charts": "^23.1.0",
+    "axios": "^1.13.1",
+    "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
+    "sql.js": "^1.13.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^20.0.0",
     "@angular/build": "^20.0.4",
     "@angular/cli": "^20.0.4",
-    "@angular/compiler-cli": "^20.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.7.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
+    "@angular/compiler-cli": "^20.3.9",
+    "@types/chart.js": "^2.9.41",
+    "@types/jest": "^30.0.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.8.2"
   }
 }
