--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,12 +4,14 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["jest"]
   },
   "include": [
     "src/**/*.ts"
   ],
+ 
   "exclude": [
     "src/**/*.spec.ts"
-  ]
+  ],
+  "composite": true
 }
