--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,4 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
-  "compileOnSave": false,
   "compilerOptions": {
     "strict": true,
     "noImplicitOverride": true,
@@ -12,8 +9,11 @@
     "isolatedModules": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "preserve"
+    "target": "ES2020", // safer for Angular build tools
+    "module": "es2020", // common Angular setting
+    "moduleResolution": "node", // ensures imports work properly
+    "baseUrl": "./", // lets you use relative paths like "@/app/..."
+    "types": [] // avoids pulling in unneeded types
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -22,13 +22,8 @@
     "typeCheckHostBindings": true,
     "strictTemplates": true
   },
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
+  "include": [
+    "src/**/*.ts",
+    "src/sql.js.d.ts"  // Ensure sql.js types are included
   ]
 }
