--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,10 +5,12 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jest"
     ]
   },
   "include": [
+    "src/**/*.spec.ts",
     "src/**/*.ts"
-  ]
+  ], 
+  "composite": true
 }
