--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "weather-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "prestart": "node set-env.js",
     "start": "ng serve",
+    "prebuild": "node set-env.js",
     "build": "ng build",
+    "ng": "ng",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -40,11 +42,13 @@
   },
   "devDependencies": {
     "@angular-builders/jest": "^20.0.0",
+    "@angular-devkit/build-angular": "^20.3.9",
     "@angular/build": "^20.0.4",
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.3.9",
     "@types/chart.js": "^2.9.41",
     "@types/jest": "^30.0.0",
+    "dotenv": "^17.2.3",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.0",
     "karma-coverage": "~2.2.0",
