--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,14 +4,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["jest"]
+    "types": []
   },
-  "include": [
-    "src/**/*.ts"
-  ],
- 
-  "exclude": [
-    "src/**/*.spec.ts"
-  ],
+  "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
+
+  "exclude": ["src/**/*.spec.ts"],
   "composite": true
 }
