--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,10 +3,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
-    "types": [
-      "jest"
-    ]
+    "outDir": "./out-tsc/spec"
   },
   "include": [
     "src/**/*.spec.ts",
