--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
   "version": 2,
   "builds": [
-    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist/weather-app" } }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist/weather-app" }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/dist/weather-app/index.html" }
   ]
 }
