--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     { "src": "package.json", "use": "@vercel/static-build" }
   ],
+  "env": {
+    "NODE_ENV": "production"
+  },
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/browser/index.html" }
   ]
 }
