--- a/angular.json
+++ b/angular.json
@@ -12,31 +12,20 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/weather-app",
+            "outputPath": "dist/weather-app/browser",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "index": "src/index.html",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
-            ], 
-            "allowedCommonJsDependencies": [
-              "sql.js",
-              "fs",
-              "path",
-              "crypto"
             ],
-            "externalDependencies": [
-              "fs",
-              "path",
-              "crypto"
-            ]
-            
+            "polyfills": ["zone.js"],
+            "allowedCommonJsDependencies": ["sql.js", "fs", "path", "crypto"],
+            "externalDependencies": ["fs", "path", "crypto"]
           },
+
           "configurations": {
             "production": {
               "outputHashing": "all",
@@ -69,10 +58,7 @@
           "options": {
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/assets",
-              "src/favicon.ico"
-            ],
+            "assets": ["src/assets", "src/favicon.ico"],
             "styles": ["src/styles.css"]
           }
         }
