--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "package.json", "use": "@vercel/static-build" }
-  ],
-  "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/dist/weather-app/browser/index.html"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist/weather-app/browser"
+      }
     }
   ],
-  "staticFiles": {
-    "distDir": "dist/weather-app/browser"
-  }
+  "routes": [
+    { "src": "/(.*)", "dest": "/dist/weather-app/browser/index.html" }
+  ]
 }
